# worktrees

./: .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  astro.config.mjs  dist-workspace.toml  implementation_plan.md  index.html  package-lock.json  package.json  reproduce_git_flag  tailwind.config.mjs  temp_reducer.rs  test_path_eq  test_path_eq.rs
.agent/rules/: master.md
.agent/workflows/: implement.md
.gemini/: GEMINI.md  SKILLS.md
.gemini/skills/: release-manager.md
.github/workflows/: ci.yml  deploy.yml
.palette/: journal.md
.sentinel/: journal.md
src/components/: AIGuideContent.astro  ArchitectureContent.astro  Aurora.astro  (+18 more)
worktree/: .gitattributes  CHANGELOG.md  CLEAN_COMMAND_IMPLEMENTATION.md  Cargo.toml  Makefile  README.md  build_output.txt  check_output.txt
worktree/.gemini/: GEMINI.md  SKILLS.md
worktree/.gemini/skills/: ci-debugger.md
worktree/.github/workflows/: ci.yml
worktree/migration_test/.bare/: index
worktree/migration_test/.bare/worktrees/main/: ORIG_HEAD  gitdir  index
worktree/migration_test/src/: main.rs
worktree/src/: cli.rs  lib.rs  main.rs
worktree/src/app/: async_tasks.rs  cli_renderer.rs  intent.rs  mod.rs  model.rs  ports.rs  reducer.rs  reducer.rs.bak  reducer_tests.rs  test_utils.rs  view.rs  warp.rs
worktree/src/app/event_handlers/: branch.rs  committing.rs  confirm.rs  editor.rs  helpers.rs  history.rs  listing.rs  mod.rs  picking.rs  prompt.rs  stash.rs  status.rs
worktree/src/app/renderers/: branch.rs  commit.rs  dashboard.rs  editor.rs  history.rs  listing.rs  mod.rs  modals.rs  prompt.rs  status.rs
worktree/src/domain/: repository.rs
worktree/src/infrastructure/: gemini_client.rs  git_repo.rs  mod.rs  warp_integration.rs
worktree/src/ui/: theme.rs
worktree/src/ui/widgets/: dashboard.rs  details.rs  footer.rs  header.rs  mod.rs  stash_list.rs  worktree_list.rs
worktree/tests/: git_repository_tests.rs  teleport_test.rs  warp_integration_test.rs
worktree/tests/common/: mod.rs
worktrees/: .gitignore  CLEAN_COMMAND_IMPLEMENTATION.md  Cargo.toml  README.md  rustfmt.toml
worktrees/.gemini/: GEMINI.md
worktrees/src/: cli.rs  main.rs
worktrees/src/app/: cli_renderer.rs  intent.rs  mod.rs  model.rs  reducer.rs  view.rs
worktrees/src/app/event_handlers/: branch.rs  committing.rs  confirm.rs  editor.rs  helpers.rs  history.rs  listing.rs  mod.rs  picking.rs  prompt.rs  status.rs
worktrees/src/app/renderers/: branch.rs  commit.rs  dashboard.rs  editor.rs  history.rs  listing.rs  mod.rs  modals.rs  prompt.rs  status.rs
worktrees/src/domain/: repository.rs
worktrees/src/infrastructure/: gemini_client.rs  git_repo.rs
worktrees/src/ui/: theme.rs
worktrees/src/ui/widgets/: dashboard.rs  details.rs  footer.rs  header.rs  mod.rs  worktree_list.rs
(+8 files in other folders)
