[workspace]
members = ["worktree"]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
strip = "debuginfo"
lto = false
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
