[package]
name = "worktree"
version = "0.3.3"
edition = "2024"
authors = ["Justin Smith"]
description = "A professional CLI for managing Git worktrees using the Bare Hub Architecture."
license = "MIT"
repository = "https://github.com/justinnathanielsmith/worktrees"
homepage = "https://justinnathanielsmith.github.io/worktrees/"
keywords = ["git", "worktree", "workflow", "bare-hub", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
clap_complete = "4.5.46"
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
indicatif = "0.17.11"
ratatui = "0.29.0"
crossterm = "0.28.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
comfy-table = "7.1.4"
miette = { version = "7.5.0", features = ["fancy"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tokio = { version = "1.43.0", features = ["full"] }
keyring = "3.6.2"
dirs = "6.0.0"
notify = "8.2.0"
crossbeam-channel = "0.5.15"
